[package]
name = "aether-network"
version = "0.2.0"
edition = "2021"
authors = ["Aether Research Team"]
description = "Post-quantum anonymity network for cybersecurity research"
license = "MIT"

[dependencies]
# Cryptography
ring = "0.17"
chacha20poly1305 = "0.10"
blake3 = "1.5"
hkdf = "0.12"
sha3 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Post-Quantum Cryptography (Updated)
pqcrypto = "0.18"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Zero-Knowledge Proofs (Arkworks Ecosystem - Latest 0.4.x)
ark-std = { version = "0.4", features = ["parallel"] }
ark-ff = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-bls12-381 = "0.4"
ark-crypto-primitives = "0.4"

# Bulletproofs
merlin = "3.0"
curve25519-dalek = "4.1"
bulletproofs = "4.0"

# Homomorphic Encryption (TFHE - Modern)
tfhe = { version = "0.7", features = ["boolean", "shortint", "integer", "x86_64"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Async & Networking
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
libp2p = { version = "0.53", features = ["full"] }
quinn = "0.11"
reqwest = { version = "0.12", features = ["json"] }

# Data Structures & Utils
dashmap = "5.5"
petgraph = "0.6"
rand = "0.8"
rand_distr = "0.4"
parking_lot = "0.12"
chrono = "0.4"
base64 = "0.22"
base32 = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
ark-snark = "0.4"

# Monitoring & Logging
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"

# SGX Support
sgx-isa = { version = "0.4", optional = true }

[features]
default = []
quantum-safe = []
sgx = ["sgx-isa"]
advanced-stealth = []
hardware-security = ["sgx"]
ai-routing = []
homomorphic = ["tfhe"]
zkproofs = [] # Arkworks is now always included for 9.8/10
ultimate = ["advanced-stealth", "hardware-security", "ai-routing", "sgx", "homomorphic"]
full = ["quantum-safe", "ultimate"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
